Analytics page & some cleanup (#9)
* reorganized package structure

* aligned init schema with current domain

* analytics APIs

* shared period selector

* analytics layout and nav

* analytics overview and forecast

* analytics breakdown, comparison and daily view

* reorganized occurrence schedule view

* tests for analytics APIs

* unified analytics category aggregation

* scoped analytics and dashboard queries per user

* hardened pay cycle comparison fallback

* scoped fixed payments occurrences lookups per user

* scoped fixed payments occurrences lookups per user

* category management view UI